# away_team

./: .gitignore  Cargo.toml  README.md  rustfmt.toml.nightly  rustfmt.toml.stable
.github/workflows/: rust.yml
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
src/: lib.rs
src/camera/: mod.rs
src/components/: mod.rs  tags.rs
src/components/bundles/: player.rs
src/debug/: mod.rs
src/resources/: mod.rs
src/resources/settings/: camera.rs
src/systems/: conditions.rs  exit.rs  init.rs  mod.rs  states.rs  transitions.rs  wait.rs
src/systems/game/: mod.rs
src/systems/game/player/: mod.rs
src/systems/menus/: main_menu.rs  mod.rs  settings.rs  splash_screen.rs
tools/ci/src/: main.rs
