#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Game"
edition     = "2021"
homepage    = "https://github.com/Laocoon7/away_team"
name        = "away_team"
readme      = "README.md"
repository  = "https://github.com/Laocoon7/away_team"
version     = "0.1.0"
#license     = "BlueOak-1.0.0"
license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "launchers/ios"]
keywords   = ["game"]
resolver   = "2"

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = [
    # "bevy_embedded_assets"
]

# default configurations
default = ["dev"]

# default configuration while developing
dev = [
    "bevy/dynamic_linking"
]

# configuration for debugging information
debug = [
  # "bevy-inspector-egui",
  # "debug-graph",
  # "debug_asset_server",
]

# Tracing
trace        = ["bevy/trace"]

################################
#########       Optimizations
################################

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.away_team]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

################################
######### Workspace Dependencies
################################
[workspace.dependencies]
# Keep these in sync with bevy
image = "0.24"
#winit = "0.27"
winit = "0.28"

################################
#########       Dependencies
################################
[dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # Bloom support
  "tonemapping_luts",
  "hdr",
  "ktx2",
  "zstd",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
]
version = "0.10"

[dependencies]
image = { workspace = true }
winit = { workspace = true }

######################################
#########       Input
######################################
#leafwing-input-manager = { version = "0.8" }

######################################
#########       Serialization
######################################
ron        = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.7"

######################################
#########       Random
######################################
noise       = "0.8"
rand        = "0.8"
rand_pcg    = { version = "0.3", features = ["serde1"] }
rand_seeder = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

######################################
#########       Utility
######################################
anyhow       = "1"

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"
